--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@ body {
   background-image: url('./img/carrots-food-fresh-616401.jpg');
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh;
+  background-attachment: fixed;
 }
 
 .hidden {
